--- a/server/assets/styles.css
+++ b/server/assets/styles.css
@@ -1,8 +1,54 @@
-#wrap {
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+  color: black;
+}
+
+#container {
   position: relative;
+  z-index: 0;
+  height: 100%;
   width: 100%;
-  height: 98vh;
-  background: #222;
+  display: flex;
+}
+
+#controls {
+  display: flex;
+  position: relative;
+  height: 100%;
+}
+
+#debug-info {
+  flex-direction: column;
+  z-index: 2;
+  position: absolute;
+  top: 100px;
+  left: 100px;
+  top: 0;
+  left: 0;
+  background-color: gray;
+}
+
+#toolbar {
+  z-index: 2;
+  position: absolute; 
+  top: 50%;
+  left: 0;
+  width: 80px;
+}
+
+#toolbar label {
+  font-size: 12px;
+}
+
+#toolbar input {
+  width: 100%;
+}
+
+#drawing-canvas {
+  width: 100%;
 }
 
 canvas {
@@ -10,20 +56,6 @@ canvas {
   left: 0;
   top: 0;
   image-rendering: pixelated;
-}
-
-#base { 
-  position: absolute;
-  z-index: 0;
-}
-
-#overlay {
-  position: absolute;
-  z-index: 1;
-}
-
-#connect-info {
-  top: 0;
-  left: 0;
-  background-color: gray;
+  background-color: white;
+  border: 1px solid black;
 }
